--- a/package.json
+++ b/package.json
@@ -1,32 +1,18 @@
-
 {
-
   "name": "MyPortfolio",
-
   "version": "0.0.1",
-
   "private": true,
-
   "dependencies": {
-
-    "ejs": "latest",
-
     "aws-sdk": "latest",
-
-    "express": "latest",
-
     "body-parser": "latest",
-
-	"cookie-parser": "latest",
-
-	"mongodb": "latest"
-
+    "cookie-parser": "latest",
+    "ejs": "latest",
+    "express": "latest",
+    "hcaptcha": "0.0.1",
+    "mongodb": "latest"
+	"hcaptcha": "latest"
   },
-
   "scripts": {
-
     "start": "node testServer.js"
-
   }
-
 }
