--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "Justin",
   "license": "ISC",
   "dependencies": {
-    "ejs": "latest",
     "@ionic-native/speech-recognition": "^5.10.0",
     "artyom.js": "^1.0.6",
     "express": "^4.17.1",
     "nativescript-speech-recognition": "^1.5.0",
     "node": "^12.7.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
+    "socket.io-stream": "^0.9.1",
     "speech-input": "0.0.3",
     "tui-usinghelloworld": "^1.0.0",
     "voice-speech-recognition": "^1.1.2",
